--- a/style.css
+++ b/style.css
@@ -5,10 +5,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  
 }
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  
 }
 
 body {
